--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,65 +1,113 @@
-<div class="row">
-  <div class="twelvecol">
-  </div>
-</div>
-
-<div class="row">
-  <div class="fourcol">
-    <h1>
-      Try our live demo
-    </h1>
-    <p>
-      <!-- As a student in our demo system,  -->
-    </p>
-
-    <%= form_for :user, :url => users_path do |form| %>
-      <%= form.hidden_field :email, :value => "#{generate_unique_id 'test-account'}@mailinator.com" %>
-      <%= form.hidden_field :password, :value => 'password' %>
-      <%= form.hidden_field :password_confirmation, :value => 'password' %>
-      <div class="submit_field">
-        <%= form.submit "Log in as a new student" %>
-      </div>
-    <% end %>
-
-    <%= form_for :session, :url => session_path do |form| %>
-      <%= form.hidden_field :email, :value => 'student@ncsu.edu' %>
-      <%= form.hidden_field :password, :value => 'password' %>
-      <div class="submit_field">
-        <%= form.submit "Log in as Stu Dent" %>
-      </div>
-    <% end %>
-
-<%
-=begin
-%>
-
-    <%= form_for :session, :url => session_path do |form| %>
-      <div class="text_field">
-        <%= form.label :email %>
-        <%= form.text_field :email %>
-      </div>
-      <div class="text_field">
-        <%= form.label :password %>
-        <%= form.password_field :password %>
-      </div>
-      <div class="submit_field">
-        <%= form.submit "Sign in" %>
-      </div>
-    <% end %>
-
-    <div style="float:left; margin: 0 1em">
-      <%= link_to "Sign up", sign_up_path %>
+<div class="landing">
+  <div class="row">
+    <div class="twelvecol">
+      <h2>
+        FreshTracks is a fresh approach to college course registration.
+        Add, drop, wishlist, and search for classes with a single click.
+      </h2>
     </div>
-    <div>
-      <%= link_to "Forgot password?", new_password_path %>
+  </div>
+
+  <div class="row">
+    <div class="fivecol">
+      <div class="roundbox">
+        <h1>
+          Try our live demo
+        </h1>
+        <p>
+          <!-- As a student in our demo system,  -->
+        </p>
+
+        <%= form_for :user, :url => users_path do |form| %>
+          <%= form.hidden_field :email, :value => "#{generate_unique_id 'test-account'}@mailinator.com" %>
+          <%= form.hidden_field :password, :value => 'password' %>
+          <%= form.hidden_field :password_confirmation, :value => 'password' %>
+          <div class="submit_field">
+            <%= form.submit "Log in as a new student" %>
+          </div>
+        <% end %>
+
+        <%= form_for :session, :url => session_path do |form| %>
+          <%= form.hidden_field :email, :value => 'student@ncsu.edu' %>
+          <%= form.hidden_field :password, :value => 'password' %>
+          <div class="submit_field">
+            <%= form.submit "Log in as Stu Dent" %>
+          </div>
+        <% end %>
+      </div>
     </div>
-<%
-=end
-%>
-  </div>
 
-  <div class="eightcol last">
-    <h1>A Fresh approach to<br>College Course Registration</h1>
-  </div>
+    <div class="sevencol last">
+      <div class="roundbox">
+        We believe:
+        <ul>
+          <li>
+            most colleges make registration too hard by developing their own or buying a registration system that is easier to make than it is to use. We put the students and professors first, and make registering with FreshTracks as easy as possible.
+          </li>
+          <li>
+            you shouldn't have to re-learn how to register for classes every semester. Using FreshTracks, it's quick and easy to find what you need to do and get it done; no arcane rituals required.
+          </li>
+          <li>
+            in simplicity. FreshTracks won't handle financial aid or tuition, housing, or updating personal information. We make registration quick, and that's it.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div><!--row-->
 
-</div>
+  <div class="row">
+    <div class="fivecol">
+      <div class="roundbox">
+        <h1>
+          title
+        </h1>
+        <p>
+          FreshTracks makes it easy to find what you need to know. It knows your plan of work and shows you all the classes you need to take to fulfill the requirements for your degree. From single classes to broad elective requirements, FreshTracks lets you know all your options.
+        </p>
+      </div>
+    </div>
+
+    <div class="sevencol last">
+      <div class="roundbox">
+        <h1>title</h1>
+        <p>
+          Before you have to add anything your schedule, FreshTracks has an integrated wishlist that lets you plan out your schedule before your registration date. When the time comes, it makes it one click to add all the classes to your schedule. Never be surprised on your registration date again.
+        </p>
+      </div>
+    </div>
+  </div><!--row-->
+
+  <div class="row">
+    <div class="sevencol">
+      <div class="roundbox">
+        <h1>
+          title
+        </h1>
+        <p>
+          FreshTracks doesn't just save students time, it saves administrators time and money.
+          <ul>
+            <li>
+              The system is built on Heroku's hosting technology, which allows us to dynamically scale the available horsepower behind FreshTracks. This means you can have ten servers handling student requests during registration, two servers for the rest of the year, and a scant single server over the summer or during breaks, when the system is getting hardly any use. Never buy expensive servers that sit unused for most of the year again.
+            </li>
+            <li>
+              We recognize that every school has a different, existing system for managing courses, so we built FreshTracks to be agile and adaptable to your environment. 
+            </li>
+            <li>
+              FreshTracks isn't stopping. Once you're using it, we keep working on it, meaning that it'll keep getting better. But don't worry, we'll never lose sight of keeping the system fast, simple, and easy.
+            </li>
+          </ul>
+        </p>
+      </div>
+    </div>
+
+    <div class="fivecol last">
+      <div class="roundbox">
+        <h1>title</h1>
+        <p>
+          For browsing the course catalog, FreshTracks lets you easily search for classses, and add them to your wishlist or schedule, all from the same page. Now you can finally find that perfect class to fill your last elective.
+        </p>
+      </div>
+    </div>
+  </div><!--row-->
+
+</div><!--landing-->
