--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -157,6 +157,17 @@ section header h1 {
   color: #B00;
 }
 
+.landing .row {
+  margin-top: 30px;
+}
+
+.roundbox {
+  border: 1px solid #d3d3d3;
+  background-color: #eaeaea;
+  border-radius: 10px;
+  padding: 10px;
+}
+
 /* Layout for mobile version */
 
 @media handheld, only screen and (max-width: 767px) {
