Landing page titles

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,26 @@
   </div>
 
   <div class="row">
-    <div class="fivecol">
+    <div class="sevencol">
+      <div class="roundbox">
+        <h1>
+          We believe:
+        </h1>
+        <ul>
+          <li>
+            most colleges make registration too hard by developing their own or buying a registration system that is easier to make than it is to use. We put the students and professors first, and make registering with FreshTracks as easy as possible.
+          </li>
+          <li>
+            you shouldn't have to re-learn how to register for classes every semester. Using FreshTracks, it's quick and easy to find what you need to do and get it done; no arcane rituals required.
+          </li>
+          <li>
+            in simplicity. FreshTracks won't handle financial aid or tuition, housing, or updating personal information. We make registration quick, and that's it.
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="fivecol last">
       <div class="roundbox">
         <h1>
           Try our live demo
@@ -36,40 +55,23 @@
         <% end %>
       </div>
     </div>
-
-    <div class="sevencol last">
-      <div class="roundbox">
-        We believe:
-        <ul>
-          <li>
-            most colleges make registration too hard by developing their own or buying a registration system that is easier to make than it is to use. We put the students and professors first, and make registering with FreshTracks as easy as possible.
-          </li>
-          <li>
-            you shouldn't have to re-learn how to register for classes every semester. Using FreshTracks, it's quick and easy to find what you need to do and get it done; no arcane rituals required.
-          </li>
-          <li>
-            in simplicity. FreshTracks won't handle financial aid or tuition, housing, or updating personal information. We make registration quick, and that's it.
-          </li>
-        </ul>
-      </div>
-    </div>
   </div><!--row-->
 
   <div class="row">
     <div class="fivecol">
       <div class="roundbox">
         <h1>
-          title
+          Know your options
         </h1>
         <p>
-          FreshTracks makes it easy to find what you need to know. It knows your plan of work and shows you all the classes you need to take to fulfill the requirements for your degree. From single classes to broad elective requirements, FreshTracks lets you know all your options.
+          FreshTracks makes it easy to find what you need to know. It knows your plan of work and shows you all the classes you need to take to fulfill the requirements for your degree, from single classes to broad elective requirements.
         </p>
       </div>
     </div>
 
     <div class="sevencol last">
       <div class="roundbox">
-        <h1>title</h1>
+        <h1>Plan ahead</h1>
         <p>
           Before you have to add anything your schedule, FreshTracks has an integrated wishlist that lets you plan out your schedule before your registration date. When the time comes, it makes it one click to add all the classes to your schedule. Never be surprised on your registration date again.
         </p>
@@ -80,8 +82,8 @@
   <div class="row">
     <div class="sevencol">
       <div class="roundbox">
-        <h1>
-          title
+          <h1>
+            A perfect fit
         </h1>
         <p>
           FreshTracks doesn't just save students time, it saves administrators time and money.
@@ -102,7 +104,7 @@
 
     <div class="fivecol last">
       <div class="roundbox">
-        <h1>title</h1>
+        <h1>Find classes you want</h1>
         <p>
           For browsing the course catalog, FreshTracks lets you easily search for classses, and add them to your wishlist or schedule, all from the same page. Now you can finally find that perfect class to fill your last elective.
         </p>
