Add screenshots to the landing page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,6 +63,7 @@
         <h1>
           Know your options
         </h1>
+        <img src="/images/landing_degree_audit.png" alt="Select required single classes, or see all the options for a elective category." width=395 height=186 />
         <p>
           FreshTracks makes it easy to find what you need to know. It knows your plan of work and shows you all the classes you need to take to fulfill the requirements for your degree, from single classes to broad elective requirements.
         </p>
@@ -75,6 +76,8 @@
         <p>
           Before you have to add anything your schedule, FreshTracks has an integrated wishlist that lets you plan out your schedule before your registration date. When the time comes, it makes it one click to add all the classes to your schedule. Never be surprised on your registration date again.
         </p>
+
+        <img src="/images/landing_wishlist.png" width=571 height=167 alt="Easily add things to your schedule from your wishlist one at a time or all together." />
       </div>
     </div>
   </div><!--row-->
@@ -105,6 +108,9 @@
     <div class="fivecol last">
       <div class="roundbox">
         <h1>Find classes you want</h1>
+
+        <img src="/images/landing_search.png" width=397 height=246 alt="Search for classes and register all from the same page." />
+
         <p>
           For browsing the course catalog, FreshTracks lets you easily search for classses, and add them to your wishlist or schedule, all from the same page. Now you can finally find that perfect class to fill your last elective.
         </p>
