--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -2,6 +2,7 @@
 
 body {
   background: #f4f4f4 url('images/gray_texture_1.jpg');
+  color: #2D3335;
 }
 
 body>header { 
@@ -166,8 +167,8 @@ section header h1 {
   margin-top: 30px;
 }
 
-.landing img{
-  border: 1px solid #4477CC;
+.landing img {
+  border: 1px solid #555;
   border-radius: 0;
   display: block;
   margin: 0 auto 20px auto;
@@ -182,6 +183,10 @@ section header h1 {
   background-color: #eaeaea;
   border-radius: 10px;
   padding: 10px;
+}
+
+ul {
+  padding-left: 40px;
 }
 
 /* Layout for mobile version */
