Rearrange landing page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,35 +51,7 @@
   </div>
 
   <div class="row">
-    <div class="sevencol">
-      <div class="roundbox">
-        <h1>
-          We believe:
-        </h1>
-        <ul>
-          <li>
-            Students deserve an intuitive interface for scheduling and registering for classes.
-            <br>
-            We developed FreshTracks with an eye to usability, working closely with students.
-            <%'We put students and professors first, and make registering with FreshTracks easy. Many colleges develop their own or buy a registration system that was easier to make than it is to use. '%>
-          </li>
-          <%"
-          <li>
-            you shouldn't have to re-learn how to register for classes every semester. Using FreshTracks, it's quick and easy to find what you need to do and get it done; no arcane rituals required.
-          </li>
-          "%>
-          <li>
-            It's best to stay focused and simple.
-            <%'reword?'%>
-            FreshTracks won't handle tuition, housing or homework.
-            We make registration quick, and that's it.
-            <%'reword?'%>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="fivecol last">
+    <div class="twelvecol">
       <div class="roundbox">
         <h1>
           Try our live demo
@@ -114,13 +86,28 @@
     <div class="fivecol">
       <div class="roundbox">
         <h1>
-          Know your options
+          We believe:
         </h1>
-        <img src="/images/landing_degree_audit.png" alt="Select required single classes, or see all the options for a elective category." width=395 height=186 />
-        <p>
-          Freshtracks shows the classes needed to fulfill requirements.
-          These expand, and you can register from the same page.
-        </p>
+        <ul>
+          <li>
+            Students deserve an intuitive interface for scheduling and registering for classes.
+            <br>
+            We developed FreshTracks with an eye to usability, working closely with students.
+            <%'We put students and professors first, and make registering with FreshTracks easy. Many colleges develop their own or buy a registration system that was easier to make than it is to use. '%>
+          </li>
+          <%"
+          <li>
+            you shouldn't have to re-learn how to register for classes every semester. Using FreshTracks, it's quick and easy to find what you need to do and get it done; no arcane rituals required.
+          </li>
+          "%>
+          <li>
+            It's best to stay focused and simple.
+            <%'reword?'%>
+            FreshTracks won't handle tuition, housing or homework.
+            We make registration quick, and that's it.
+            <%'reword?'%>
+          </li>
+        </ul>
       </div>
     </div>
 
@@ -138,6 +125,18 @@
   </div><!--row-->
 
   <div class="row">
+    <div class="sevencol">
+      <div class="roundbox">
+        <h1>
+          Know your options
+        </h1>
+        <img src="/images/landing_degree_audit.png" alt="Select required single classes, or see all the options for a elective category." width=395 height=186 />
+        <p>
+          Freshtracks shows the classes needed to fulfill requirements.
+          These expand, and you can register from the same page.
+        </p>
+      </div>
+    </div>
 
     <div class="fivecol last">
       <div class="roundbox">
