Added styling and example markup for new 'Add to Wishlist' and 'Add to Schedule'

--- a/app/views/sections/_section.html.erb
+++ b/app/views/sections/_section.html.erb
@@ -42,6 +42,13 @@
         <% end %>
       <% end %>
     </p>
+    <!-- <div class="course_buttons">
+      <em>add to</em>
+      <select id="form-">
+        <option value="wishlist">Wishlist</option>
+        <option value="schedule">Schedule</option>
+      </select>
+    </div> -->
   </div><!--last-->
 
 </div><!--row code-->
