--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -226,6 +226,14 @@ ul {
     margin-left: 0;
   }
 
+  .row {
+    margin-top: 0px !important;
+  }
+
+  .roundbox {
+    margin-bottom: 30px;
+  }
+
 }
 
 
