--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
   end
   %>
 
-  <% if session[:semester] %>
+  <% if signed_in? && session[:semester] %>
     <div class="right-align">
     Semester: <%= Semester.find(session[:semester]).name %> (<%= link_to "Change semester", semesters_path%>) | <%= link_to "Sign out", '/sign_out', :method => :delete %> 
     </div>
@@ -55,25 +55,27 @@
 <% end %>
 
 <section class="container">
-  <div class="row">
-    <div class="twelvecol">
-      <nav>
-        <ul>
-          <li class="tab "<%= ( @selected_tab == 'tab1' ) ? ' id="selected-tab"'.html_safe : '' %>>
-            <%= link_to "Class Search", courses_path %>
-            <hr class="nav-divider">
-          </li>
-          <li class="tab "<%= ( @selected_tab == 'tab2' ) ? ' id="selected-tab"'.html_safe : '' %>>
-            <%= link_to "Degree Requirements", degree_requirements_path %>
-            <hr class="nav-divider">
-          </li>
-          <li class="tab "<%= ( @selected_tab == 'tab3' ) ? ' id="selected-tab"'.html_safe : '' %>>
-            <%= link_to "Wishlist", wishlist_sections_path %>
-          </li>
-        </ul>
-      </nav>
+  <% if signed_in? && session[:semester] %>
+    <div class="row">
+      <div class="twelvecol">
+        <nav>
+          <ul>
+            <li class="tab "<%= ( @selected_tab == 'tab1' ) ? ' id="selected-tab"'.html_safe : '' %>>
+              <%= link_to "Class Search", courses_path %>
+              <hr class="nav-divider">
+            </li>
+            <li class="tab "<%= ( @selected_tab == 'tab2' ) ? ' id="selected-tab"'.html_safe : '' %>>
+              <%= link_to "Degree Requirements", degree_requirements_path %>
+              <hr class="nav-divider">
+            </li>
+            <li class="tab "<%= ( @selected_tab == 'tab3' ) ? ' id="selected-tab"'.html_safe : '' %>>
+              <%= link_to "Wishlist", wishlist_sections_path %>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
-  </div>
+  <% end %>
 
   <%= yield %>
 </section><!--container-->
